# orcalang

./: .gitignore  CMakeLists.txt  OrcaLexer.g4  OrcaParser.g4
.github/workflows/: build-and-test.yml  cmake-single-platform.yml
src/: AstBuilder.h  OrcaAst.cpp  OrcaAst.h  OrcaAstBuilder.cpp  OrcaAstBuilder.h  OrcaAstVisitor.cpp  OrcaAstVisitor.h  OrcaCodeGen.cpp  OrcaCodeGen.h  OrcaContext.cpp  OrcaContext.h  OrcaError.cpp  OrcaError.h  OrcaLLVMBuilder.h  OrcaLexer.g4  OrcaLexerErrorListener.cpp  OrcaLexerErrorListener.h  OrcaOperator.cpp  OrcaOperator.h  OrcaParser.g4  OrcaParserErrorListener.cpp  OrcaParserErrorListener.h  OrcaScope.h  OrcaType.cpp  OrcaType.h  OrcaTypeChecker.h  TypeChecker.cpp  TypeChecker.h  main.cpp
src/Operator/: Operator.h
src/Operator/Binary/: Add.cpp  Add.h  Assign.cpp  Assign.h  Binary.h  CmpEQ.cpp  CmpEQ.h  CmpGE.cpp  CmpGE.h  CmpGT.cpp  CmpGT.h  CmpLE.cpp  CmpLE.h  CmpLT.cpp  CmpLT.h  CmpNE.cpp  CmpNE.h  Div.cpp  Div.h  LogicalAnd.cpp  LogicalAnd.h  LogicalOr.cpp  LogicalOr.h  Mod.cpp  Mod.h  Mul.cpp  Mul.h  Sub.cpp  Sub.h
src/Operator/Unary/: AddrOf.cpp  AddrOf.h  BitNot.cpp  BitNot.h  Neg.cpp  Neg.h  Not.cpp  Not.h  Unary.h
src/utils/: printfColors.h
test/: add_operator.cpp  main.cpp  orca_test.cpp  snapshot.cpp  stage1.cpp  utils.cpp  utils.h
test/approval_tests/: s1_ast_typed_newlines.approved.txt  s1_ast_untyped_multi_digit.approved.txt  s1_ast_untyped_no_newlines.approved.txt  s1_ast_untyped_return_0.approved.txt  s1_ast_untyped_return_2.approved.txt  s1_ast_untyped_spaces.approved.txt  s1_llvm_ir_multi_digit.approved.txt  s2_ast_typed_neg.approved.txt  s2_ast_typed_nested_ops.approved.txt  s2_ast_typed_nested_ops_2.approved.txt  s2_ast_untyped_bitwise_zero.approved.txt  s2_ast_untyped_neg.approved.txt  s2_ast_untyped_nested_ops.approved.txt  s2_ast_untyped_nested_ops_2.approved.txt  s2_ast_untyped_not_0.approved.txt  s2_ast_untyped_not_5.approved.txt  s2_llvm_ir_bitwise.approved.txt  s2_llvm_ir_neg.approved.txt  s3_ast_typed_associativity.approved.txt  s3_ast_typed_div.approved.txt  s3_ast_typed_precedence.approved.txt  s3_ast_typed_sub_neg.approved.txt  s3_ast_typed_unop_add.approved.txt  s3_ast_untyped_associativity.approved.txt  s3_ast_untyped_associativity_2.approved.txt  s3_ast_untyped_parens.approved.txt  s3_ast_untyped_sub_neg.approved.txt  s3_ast_untyped_unop_add.approved.txt  s3_llvm_ir_associativity.approved.txt  s3_llvm_ir_div.approved.txt  s3_llvm_ir_mult.approved.txt  s3_llvm_ir_precedence.approved.txt  s4_ast_typed_and_false.approved.txt  s4_ast_typed_and_true.approved.txt  s4_ast_typed_eq_false.approved.txt  s4_ast_typed_eq_true.approved.txt  s4_ast_typed_ge_false.approved.txt  s4_ast_typed_ge_true.approved.txt  s4_ast_typed_gt_false.approved.txt  s4_ast_typed_gt_true.approved.txt  (+151 more)
test/cases/stage1/invalid/: missing_paren.orca  missing_retval.orca  no_brace.orca  no_semicolon.orca  no_space.orca  wrong_case.orca
test/cases/stage1/valid/: multi_digit.orca  newlines.orca  no_newlines.orca  return_0.orca  return_2.orca  spaces.orca
test/cases/stage2/valid/: bitwise.orca  bitwise_zero.orca  neg.orca  nested_ops.orca  nested_ops_2.orca  not_0.orca  not_5.orca
test/cases/stage3/valid/: add.orca  associativity.orca  associativity_2.orca  div.orca  div_neg.orca  mult.orca  parens.orca  precedence.orca  sub.orca  sub_neg.orca  unop_add.orca  unop_parens.orca
test/cases/stage4/valid/: and_false.orca  and_true.orca  eq_false.orca  eq_true.orca  ge_false.orca  ge_true.orca  gt_false.orca  gt_true.orca  le_false.orca  le_true.orca  lt_false.orca  lt_true.orca  ne_false.orca  ne_true.orca  or_false.orca  or_true.orca  precedence.orca  precedence_2.orca  precedence_3.orca  precedence_4.orca  skip_on_failure_multi_short_circuit.orca  skip_on_failure_short_circuit_and.orca  skip_on_failure_short_circuit_or.orca
test/cases/stage5/valid/: assign.orca  assign_val.orca  exp_return_val.orca  missing_return.orca  multiple_vars.orca  no_initialize.orca  refer.orca  unused_exp.orca
test/cases/stage6/valid/: assign_ternary.orca  else.orca  if_nested.orca  if_nested_2.orca  if_nested_3.orca  if_nested_4.orca  if_nested_5.orca  if_not_taken.orca  if_taken.orca  multiple_if.orca  multiple_ternary.orca  nested_ternary.orca  nested_ternary_2.orca  rh_assignment.orca  ternary.orca  ternary_short_circuit.orca  ternary_short_circuit_2.orca
test/cases/stage7/valid/: consecutive_blocks.orca  consecutive_declarations.orca  declare_after_block.orca  declare_block.orca  declare_late.orca  multi_nesting.orca  nested_if.orca  nested_scope.orca
